OpenAI for Portuguese version

--- a/.env.backup
+++ b/.env.backup
@@ -106,6 +106,6 @@ FEATURE_VOICE_SELECTION=true
 # 备用配置
 # ------------------------------------------
 
-OPENAI_API_KEY=sk-your-openai-key
+OPENAI_API_KEY="sk-"
 ENABLE_OPENAI_FALLBACK=false
 
