--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain==0.2.11
 langchain-chroma==0.1.2
 langchain-community==0.2.10
+langchain-openai==0.1.20
 chromadb
 streamlit
 python-dotenv
